--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "About Page";
+const pageTitle = "Blog Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <h2>My awesome about subtitle</h2>
+  <h2>My awesome blog subtitle</h2>
 </BaseLayout>
